--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "desafio-b2w",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yagobatista.github.io/desafio-b2w/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "css-loader": "^3.3.2",
+    "gh-pages": "^2.1.1",
     "node-sass": "^4.13.0",
     "style-loader": "^1.0.1"
   }
